...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onRefresh="@{viewmodel}"
    app:refreshing="@{viewmodel.dataLoading}">

    <RelativeLayout
        android:id="@+id/goalsContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:orientation="vertical">

        <LinearLayout
...
